# qsipost

./: .dockerignore  .gitattributes  .gitignore  .zenodo.json  CHANGES.rst  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.rst  REFERENCES.md  long_description.rst  pyproject.toml
.circleci/: 3TissueReconTests.sh  AMICOReconTests.sh  AllFieldmaps.sh  AutoTrackTest.sh  CUDATest.sh  DIPYReconTests.sh  DRBUDDI_SHORELine_epi.sh  DRBUDDI_TENSORLine_epi.sh  DRBUDDI_eddy_rpe_series.sh  DSCSDSI.sh  DSCSDSI_outputs.txt  DSDTI_TOPUP.sh  DSDTI_nofmap.sh  DSDTI_nofmap_outputs.txt  DSDTI_outputs.txt  DSDTI_synfmap.sh  DSDTI_synsdc_outputs.txt  FreeSurferIngressTest.sh  HBCD_preproc.sh  IngressReconTests.sh  IntramodalTemplate.sh  IntramodalTemplate_outputs.txt  Mrtrix3ReconTests.sh  MultiT1w.sh  MultishellScalarfestTests.sh  PyAFQReconExternalTrk.sh  PyAFQReconTests.sh  ReconTests.sh  ScalarMapper.sh  TortoiseRecon.sh  config.yml  get_data.sh
.circleci/pytests/: test_drbuddi.py
.github/: config.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
docs/: Makefile  citing.rst  comparisons.md  conf.py  contributors.rst  help.rst  index.rst  installation.rst  license.rst  preprocessing.rst  quickstart.rst  reconstruction.rst  usage.rst
qsipost/: __init__.py  config.py
qsiprep/: config.py
tests/: data_tests.py  get_data.py  grouping_tests.py  opts_tests.py  smoke_tests.py  test_lesion.py
wrapper/: LICENSE  pyproject.toml
wrapper/qsipost_container/: qsipost_docker.py  qsipost_singularity.py
wrapper/qsiprep_container/: qsiprep_singularity.py
(+102 files in other folders)
